* bump toc to 50400
* add hold shift to use azure water strider when not using a flying mount, ctrl + shift to use it even when you can fly